// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defineBuildHostConfig the application name is set as the federation plugin application name 1`] = `
{
  "dts": false,
  "manifest": false,
  "name": "host",
  "remotes": {},
  "shared": {
    "@squide/core": {
      "eager": true,
      "singleton": true,
    },
    "@squide/module-federation": {
      "eager": true,
      "singleton": true,
    },
    "@squide/msw": {
      "eager": true,
      "singleton": true,
    },
    "@squide/react-router": {
      "eager": true,
      "singleton": true,
    },
    "react": {
      "eager": true,
      "requiredVersion": undefined,
      "singleton": true,
    },
    "react-dom": {
      "eager": true,
      "singleton": true,
    },
    "react-router-dom": {
      "eager": true,
      "singleton": true,
    },
  },
}
`;

exports[`defineBuildHostConfig the module federation plugin configuration includes the default shared dependencies 1`] = `
{
  "dts": false,
  "manifest": false,
  "name": "host",
  "remotes": {},
  "shared": {
    "@squide/core": {
      "eager": true,
      "singleton": true,
    },
    "@squide/module-federation": {
      "eager": true,
      "singleton": true,
    },
    "@squide/msw": {
      "eager": true,
      "singleton": true,
    },
    "@squide/react-router": {
      "eager": true,
      "singleton": true,
    },
    "react": {
      "eager": true,
      "requiredVersion": undefined,
      "singleton": true,
    },
    "react-dom": {
      "eager": true,
      "singleton": true,
    },
    "react-router-dom": {
      "eager": true,
      "singleton": true,
    },
  },
}
`;

exports[`defineBuildHostConfig the module federation plugin configuration includes the remotes 1`] = `
{
  "dts": false,
  "manifest": false,
  "name": "host",
  "remotes": {
    "remote1": "remote1@http://localhost/remote1/remoteEntry.js",
    "remote2": "remote2@http://localhost/remote2/remoteEntry.js",
  },
  "shared": {
    "@squide/core": {
      "eager": true,
      "singleton": true,
    },
    "@squide/module-federation": {
      "eager": true,
      "singleton": true,
    },
    "@squide/msw": {
      "eager": true,
      "singleton": true,
    },
    "@squide/react-router": {
      "eager": true,
      "singleton": true,
    },
    "react": {
      "eager": true,
      "requiredVersion": undefined,
      "singleton": true,
    },
    "react-dom": {
      "eager": true,
      "singleton": true,
    },
    "react-router-dom": {
      "eager": true,
      "singleton": true,
    },
  },
}
`;

exports[`defineBuildHostConfig when a function is provided to override the module federation plugin, apply the function 1`] = `
{
  "dts": false,
  "filename": "this is a dummy test value",
  "manifest": false,
  "name": "host",
  "remotes": {},
  "shared": {
    "@squide/core": {
      "eager": true,
      "singleton": true,
    },
    "@squide/module-federation": {
      "eager": true,
      "singleton": true,
    },
    "@squide/msw": {
      "eager": true,
      "singleton": true,
    },
    "@squide/react-router": {
      "eager": true,
      "singleton": true,
    },
    "react": {
      "eager": true,
      "requiredVersion": undefined,
      "singleton": true,
    },
    "react-dom": {
      "eager": true,
      "singleton": true,
    },
    "react-router-dom": {
      "eager": true,
      "singleton": true,
    },
  },
}
`;

exports[`defineBuildHostConfig when additional options are provided for an existing default shared dependency, add the consumer options to the default options 1`] = `
{
  "dts": false,
  "manifest": false,
  "name": "host",
  "remotes": {},
  "shared": {
    "@squide/core": {
      "eager": true,
      "singleton": true,
    },
    "@squide/module-federation": {
      "eager": true,
      "singleton": true,
    },
    "@squide/msw": {
      "eager": true,
      "singleton": true,
    },
    "@squide/react-router": {
      "eager": true,
      "singleton": true,
    },
    "react": {
      "eager": true,
      "requiredVersion": "1.2.3",
      "singleton": true,
    },
    "react-dom": {
      "eager": true,
      "singleton": true,
    },
    "react-router-dom": {
      "eager": true,
      "singleton": true,
    },
  },
}
`;

exports[`defineBuildHostConfig when additional shared dependencies are provided, add the dependencies to the module federation plugin configuration 1`] = `
{
  "dts": false,
  "manifest": false,
  "name": "host",
  "remotes": {},
  "shared": {
    "@squide/core": {
      "eager": true,
      "singleton": true,
    },
    "@squide/module-federation": {
      "eager": true,
      "singleton": true,
    },
    "@squide/msw": {
      "eager": true,
      "singleton": true,
    },
    "@squide/react-router": {
      "eager": true,
      "singleton": true,
    },
    "first": {
      "singleton": true,
    },
    "react": {
      "eager": true,
      "requiredVersion": undefined,
      "singleton": true,
    },
    "react-dom": {
      "eager": true,
      "singleton": true,
    },
    "react-router-dom": {
      "eager": true,
      "singleton": true,
    },
    "second": {
      "eager": true,
      "singleton": true,
    },
  },
}
`;

exports[`defineBuildHostConfig when environmentVariables is env-vars, add env-vars shared dependency and requiredVersion: false to the react shared dependency definition 1`] = `
{
  "dts": false,
  "manifest": false,
  "name": "host",
  "remotes": {},
  "shared": {
    "@squide/core": {
      "eager": true,
      "singleton": true,
    },
    "@squide/env-vars": {
      "eager": true,
      "singleton": true,
    },
    "@squide/module-federation": {
      "eager": true,
      "singleton": true,
    },
    "@squide/msw": {
      "eager": true,
      "singleton": true,
    },
    "@squide/react-router": {
      "eager": true,
      "singleton": true,
    },
    "react": {
      "eager": true,
      "requiredVersion": undefined,
      "singleton": true,
    },
    "react-dom": {
      "eager": true,
      "singleton": true,
    },
    "react-router-dom": {
      "eager": true,
      "singleton": true,
    },
  },
}
`;

exports[`defineBuildHostConfig when honeycomb is activated, add honeycomb shared dependency and requiredVersion: false to the react shared dependency definition 1`] = `
{
  "dts": false,
  "manifest": false,
  "name": "host",
  "remotes": {},
  "shared": {
    "@squide/core": {
      "eager": true,
      "singleton": true,
    },
    "@squide/firefly-honeycomb": {
      "eager": true,
      "singleton": true,
    },
    "@squide/module-federation": {
      "eager": true,
      "singleton": true,
    },
    "@squide/msw": {
      "eager": true,
      "singleton": true,
    },
    "@squide/react-router": {
      "eager": true,
      "singleton": true,
    },
    "react": {
      "eager": true,
      "requiredVersion": undefined,
      "singleton": true,
    },
    "react-dom": {
      "eager": true,
      "singleton": true,
    },
    "react-router-dom": {
      "eager": true,
      "singleton": true,
    },
  },
}
`;

exports[`defineBuildHostConfig when i18next is activated, add i18next shared dependency and requiredVersion: false to the react shared dependency definition 1`] = `
{
  "dts": false,
  "manifest": false,
  "name": "host",
  "remotes": {},
  "shared": {
    "@squide/core": {
      "eager": true,
      "singleton": true,
    },
    "@squide/i18next": {
      "eager": true,
      "singleton": true,
    },
    "@squide/module-federation": {
      "eager": true,
      "singleton": true,
    },
    "@squide/msw": {
      "eager": true,
      "singleton": true,
    },
    "@squide/react-router": {
      "eager": true,
      "singleton": true,
    },
    "i18next": {
      "eager": true,
      "singleton": true,
    },
    "react": {
      "eager": true,
      "requiredVersion": false,
      "singleton": true,
    },
    "react-dom": {
      "eager": true,
      "singleton": true,
    },
    "react-i18next": {
      "eager": true,
      "singleton": true,
    },
    "react-router-dom": {
      "eager": true,
      "singleton": true,
    },
  },
}
`;

exports[`defineBuildHostConfig when no asset prefix is provided, the default asset prefix is "auto" 1`] = `
{
  "dts": false,
  "manifest": false,
  "name": "host",
  "remotes": {},
  "shared": {
    "@squide/core": {
      "eager": true,
      "singleton": true,
    },
    "@squide/module-federation": {
      "eager": true,
      "singleton": true,
    },
    "@squide/msw": {
      "eager": true,
      "singleton": true,
    },
    "@squide/react-router": {
      "eager": true,
      "singleton": true,
    },
    "react": {
      "eager": true,
      "requiredVersion": undefined,
      "singleton": true,
    },
    "react-dom": {
      "eager": true,
      "singleton": true,
    },
    "react-router-dom": {
      "eager": true,
      "singleton": true,
    },
  },
}
`;

exports[`defineBuildHostConfig when overriding options are provided for a default shared dependency, use the consumer option 1`] = `
{
  "dts": false,
  "manifest": false,
  "name": "host",
  "remotes": {},
  "shared": {
    "@squide/core": {
      "eager": true,
      "singleton": true,
    },
    "@squide/module-federation": {
      "eager": true,
      "singleton": true,
    },
    "@squide/msw": {
      "eager": true,
      "singleton": true,
    },
    "@squide/react-router": {
      "eager": true,
      "singleton": true,
    },
    "react": {
      "eager": false,
      "requiredVersion": undefined,
      "singleton": false,
    },
    "react-dom": {
      "eager": true,
      "singleton": true,
    },
    "react-router-dom": {
      "eager": true,
      "singleton": true,
    },
  },
}
`;

exports[`defineBuildHostConfig when the router is not react-router, do not add react-router shared dependencies 1`] = `
{
  "dts": false,
  "manifest": false,
  "name": "host",
  "remotes": {},
  "shared": {
    "@squide/core": {
      "eager": true,
      "singleton": true,
    },
    "@squide/module-federation": {
      "eager": true,
      "singleton": true,
    },
    "@squide/msw": {
      "eager": true,
      "singleton": true,
    },
    "react": {
      "eager": true,
      "requiredVersion": undefined,
      "singleton": true,
    },
    "react-dom": {
      "eager": true,
      "singleton": true,
    },
  },
}
`;

exports[`defineDevHostConfig the application name is set as the federation plugin application name 1`] = `
{
  "dts": false,
  "manifest": false,
  "name": "host",
  "remotes": {},
  "shared": {
    "@squide/core": {
      "eager": true,
      "singleton": true,
    },
    "@squide/module-federation": {
      "eager": true,
      "singleton": true,
    },
    "@squide/msw": {
      "eager": true,
      "singleton": true,
    },
    "@squide/react-router": {
      "eager": true,
      "singleton": true,
    },
    "react": {
      "eager": true,
      "requiredVersion": undefined,
      "singleton": true,
    },
    "react-dom": {
      "eager": true,
      "singleton": true,
    },
    "react-router-dom": {
      "eager": true,
      "singleton": true,
    },
  },
}
`;

exports[`defineDevHostConfig the module federation plugin configuration includes the default shared dependencies 1`] = `
{
  "dts": false,
  "manifest": false,
  "name": "host",
  "remotes": {},
  "shared": {
    "@squide/core": {
      "eager": true,
      "singleton": true,
    },
    "@squide/module-federation": {
      "eager": true,
      "singleton": true,
    },
    "@squide/msw": {
      "eager": true,
      "singleton": true,
    },
    "@squide/react-router": {
      "eager": true,
      "singleton": true,
    },
    "react": {
      "eager": true,
      "requiredVersion": undefined,
      "singleton": true,
    },
    "react-dom": {
      "eager": true,
      "singleton": true,
    },
    "react-router-dom": {
      "eager": true,
      "singleton": true,
    },
  },
}
`;

exports[`defineDevHostConfig the module federation plugin configuration includes the remotes 1`] = `
{
  "dts": false,
  "manifest": false,
  "name": "host",
  "remotes": {
    "remote1": "remote1@http://localhost/remote1/remoteEntry.js",
    "remote2": "remote2@http://localhost/remote2/remoteEntry.js",
  },
  "shared": {
    "@squide/core": {
      "eager": true,
      "singleton": true,
    },
    "@squide/module-federation": {
      "eager": true,
      "singleton": true,
    },
    "@squide/msw": {
      "eager": true,
      "singleton": true,
    },
    "@squide/react-router": {
      "eager": true,
      "singleton": true,
    },
    "react": {
      "eager": true,
      "requiredVersion": undefined,
      "singleton": true,
    },
    "react-dom": {
      "eager": true,
      "singleton": true,
    },
    "react-router-dom": {
      "eager": true,
      "singleton": true,
    },
  },
}
`;

exports[`defineDevHostConfig when a function is provided to override the module federation plugin, apply the function 1`] = `
{
  "dts": false,
  "filename": "this is a dummy test value",
  "manifest": false,
  "name": "host",
  "remotes": {},
  "shared": {
    "@squide/core": {
      "eager": true,
      "singleton": true,
    },
    "@squide/module-federation": {
      "eager": true,
      "singleton": true,
    },
    "@squide/msw": {
      "eager": true,
      "singleton": true,
    },
    "@squide/react-router": {
      "eager": true,
      "singleton": true,
    },
    "react": {
      "eager": true,
      "requiredVersion": undefined,
      "singleton": true,
    },
    "react-dom": {
      "eager": true,
      "singleton": true,
    },
    "react-router-dom": {
      "eager": true,
      "singleton": true,
    },
  },
}
`;

exports[`defineDevHostConfig when additional options are provided for an existing default shared dependency, add the consumer options to the default options 1`] = `
{
  "dts": false,
  "manifest": false,
  "name": "host",
  "remotes": {},
  "shared": {
    "@squide/core": {
      "eager": true,
      "singleton": true,
    },
    "@squide/module-federation": {
      "eager": true,
      "singleton": true,
    },
    "@squide/msw": {
      "eager": true,
      "singleton": true,
    },
    "@squide/react-router": {
      "eager": true,
      "singleton": true,
    },
    "react": {
      "eager": true,
      "requiredVersion": "1.2.3",
      "singleton": true,
    },
    "react-dom": {
      "eager": true,
      "singleton": true,
    },
    "react-router-dom": {
      "eager": true,
      "singleton": true,
    },
  },
}
`;

exports[`defineDevHostConfig when additional shared dependencies are provided, add the dependencies to the module federation plugin configuration 1`] = `
{
  "dts": false,
  "manifest": false,
  "name": "host",
  "remotes": {},
  "shared": {
    "@squide/core": {
      "eager": true,
      "singleton": true,
    },
    "@squide/module-federation": {
      "eager": true,
      "singleton": true,
    },
    "@squide/msw": {
      "eager": true,
      "singleton": true,
    },
    "@squide/react-router": {
      "eager": true,
      "singleton": true,
    },
    "first": {
      "singleton": true,
    },
    "react": {
      "eager": true,
      "requiredVersion": undefined,
      "singleton": true,
    },
    "react-dom": {
      "eager": true,
      "singleton": true,
    },
    "react-router-dom": {
      "eager": true,
      "singleton": true,
    },
    "second": {
      "eager": true,
      "singleton": true,
    },
  },
}
`;

exports[`defineDevHostConfig when environmentVariables is activated, add env-var shared dependency and requiredVersion: false to the react shared dependency definition 1`] = `
{
  "dts": false,
  "manifest": false,
  "name": "host",
  "remotes": {},
  "shared": {
    "@squide/core": {
      "eager": true,
      "singleton": true,
    },
    "@squide/env-vars": {
      "eager": true,
      "singleton": true,
    },
    "@squide/module-federation": {
      "eager": true,
      "singleton": true,
    },
    "@squide/msw": {
      "eager": true,
      "singleton": true,
    },
    "@squide/react-router": {
      "eager": true,
      "singleton": true,
    },
    "react": {
      "eager": true,
      "requiredVersion": undefined,
      "singleton": true,
    },
    "react-dom": {
      "eager": true,
      "singleton": true,
    },
    "react-router-dom": {
      "eager": true,
      "singleton": true,
    },
  },
}
`;

exports[`defineDevHostConfig when honeycomb is activated, add honeycomb shared dependency and requiredVersion: false to the react shared dependency definition 1`] = `
{
  "dts": false,
  "manifest": false,
  "name": "host",
  "remotes": {},
  "shared": {
    "@squide/core": {
      "eager": true,
      "singleton": true,
    },
    "@squide/firefly-honeycomb": {
      "eager": true,
      "singleton": true,
    },
    "@squide/module-federation": {
      "eager": true,
      "singleton": true,
    },
    "@squide/msw": {
      "eager": true,
      "singleton": true,
    },
    "@squide/react-router": {
      "eager": true,
      "singleton": true,
    },
    "react": {
      "eager": true,
      "requiredVersion": undefined,
      "singleton": true,
    },
    "react-dom": {
      "eager": true,
      "singleton": true,
    },
    "react-router-dom": {
      "eager": true,
      "singleton": true,
    },
  },
}
`;

exports[`defineDevHostConfig when i18next is activated, add i18next shared dependency and requiredVersion: false to the react shared dependency definition 1`] = `
{
  "dts": false,
  "manifest": false,
  "name": "host",
  "remotes": {},
  "shared": {
    "@squide/core": {
      "eager": true,
      "singleton": true,
    },
    "@squide/i18next": {
      "eager": true,
      "singleton": true,
    },
    "@squide/module-federation": {
      "eager": true,
      "singleton": true,
    },
    "@squide/msw": {
      "eager": true,
      "singleton": true,
    },
    "@squide/react-router": {
      "eager": true,
      "singleton": true,
    },
    "i18next": {
      "eager": true,
      "singleton": true,
    },
    "react": {
      "eager": true,
      "requiredVersion": false,
      "singleton": true,
    },
    "react-dom": {
      "eager": true,
      "singleton": true,
    },
    "react-i18next": {
      "eager": true,
      "singleton": true,
    },
    "react-router-dom": {
      "eager": true,
      "singleton": true,
    },
  },
}
`;

exports[`defineDevHostConfig when overriding options are provided for a default shared dependency, use the consumer option 1`] = `
{
  "dts": false,
  "manifest": false,
  "name": "host",
  "remotes": {},
  "shared": {
    "@squide/core": {
      "eager": true,
      "singleton": true,
    },
    "@squide/module-federation": {
      "eager": true,
      "singleton": true,
    },
    "@squide/msw": {
      "eager": true,
      "singleton": true,
    },
    "@squide/react-router": {
      "eager": true,
      "singleton": true,
    },
    "react": {
      "eager": false,
      "requiredVersion": undefined,
      "singleton": false,
    },
    "react-dom": {
      "eager": true,
      "singleton": true,
    },
    "react-router-dom": {
      "eager": true,
      "singleton": true,
    },
  },
}
`;

exports[`defineDevHostConfig when the router is not react-router, do not add react-router shared dependencies 1`] = `
{
  "dts": false,
  "manifest": false,
  "name": "host",
  "remotes": {},
  "shared": {
    "@squide/core": {
      "eager": true,
      "singleton": true,
    },
    "@squide/module-federation": {
      "eager": true,
      "singleton": true,
    },
    "@squide/msw": {
      "eager": true,
      "singleton": true,
    },
    "react": {
      "eager": true,
      "requiredVersion": undefined,
      "singleton": true,
    },
    "react-dom": {
      "eager": true,
      "singleton": true,
    },
  },
}
`;
